After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 601432 - Incorrect GtkMovementStep description
Incorrect GtkMovementStep description
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Documentation
2.19.x
Other Linux
: Normal trivial
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2009-11-10 19:21 UTC by James Campos
Modified: 2009-11-10 19:53 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description James Campos 2009-11-10 19:21:04 UTC
The description for GTK_MOVEMENT_DISPLAY_LINE_ENDS is incorrect, and is merely a copy of the description for GTK_MOVEMENT_DISPLAY_LINES:

  GTK_MOVEMENT_DISPLAY_LINES,     /* move up/down lines (wrapped lines) */
  GTK_MOVEMENT_DISPLAY_LINE_ENDS, /* move up/down lines (wrapped lines) */

A better description would be:
  GTK_MOVEMENT_DISPLAY_LINES,     /* move up/down lines (wrapped lines) */
  GTK_MOVEMENT_DISPLAY_LINE_ENDS, /* move to either end of a line */


This would mirror the description for GTK_MOVEMENT_PARAGRAPH:
  GTK_MOVEMENT_PARAGRAPHS,        /* move up/down paragraphs (newline-ended lines) */
  GTK_MOVEMENT_PARAGRAPH_ENDS,    /* move to either end of a paragraph */
Comment 1 Javier Jardón (IRC: jjardon) 2009-11-10 19:53:42 UTC
Hello James,

A new commit has been created to fix this:

http://git.gnome.org/cgit/gtk+/commit/?id=c366d5c89ee7f235187f3d37724d4ed281e0e9bc

Thank you for your bug report.