Fix incorrect GtkMovementStep description

Reported by James Campos here:
https://bugzilla.gnome.org/show_bug.cgi?id=601432